--- a/index.html
+++ b/index.html
@@ -6,5 +6,60 @@
 </head>
 
 <body>
+<header>
+  <nav>
+    <span> Sobre mi</span>
+    <span> Skills</span>
+    <span> Estudios</span>
+    <span> Contacto</span>
+  </nav>
+	</header>
+	<main>
+		<section>
+			<h1> Rocio Paone</h1>
+			<img src="img/paone_rocio.jpg" width="540px" height="675px" alt="Foto de Rocio Paone">
+		</section>
+		<section>
+			<h2> Sobre m&iacute;</h2>
+			<p>¡Hola! Me llamo Rocio, pero prefiero que me digan Ro. Tengo 22 años y me encanta poder crear y materializar ideas. Siempre busco desafiar mis l&iacute;mites y expandir mis habilidades. Estoy ansiosa por contribuir con mi creatividad y determinaci&oacute;n a nuevos proyectos y equipos.</p>
+		</section>
+		<section>
+			<h2> Skills</h2>
+			<li>Ingl&eacute;s (Intermedio)</li>
+			<li>Proactiva</li>
+			<li>Trabajo en equipo</li>
+			<li>Edici&oacute;n de video</li>
+			<li>Ilustraci&oacute;n</li>
+			
+			<h3> Software</h3>
+			<li>Adobe Photoshop</li>
+			<li>Adobe Illustrator</li>
+			<li>Adobe InDesign</li>
+			<li>Adobe Premiere Rush</li>
+	  	</section>
+		<section>
+			<h2> Estudios</h2>
+			<li>Bachiller en Comunicaci&oacute;n</li>
+			<ul> Colegio Colinas Verdes (2013-2019)</ul>
+			<li>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</li>
+			<ul> Universidad Nacional de Lan&uacute;s (2020-actualidad)</ul>
+			<li>Ingl&eacute;s Level 5th</li>
+			<ul> School of English Abbey Road (en curso)</ul>
+	  	</section>
+		<section>
+			<h2> Contacto</h2>
+			<img src="img/whatsapp.png" width="30px" height="30px" alt="Logo WhatsApp">
+			<span>1521842618</span>
+			<img src="img/instagram.png" width="30px" height="30px" alt="Logo Instagram">
+			<span> @ropaone_</span>
+			<img src="img/correo negro.png" width="30px" height="30px" alt="Logo Correo">
+			<span> ropaone28@gmail.com</span>
+			<img src="img/behance.png" width="30px" height="30px" alt="Logo Behance">
+			<span> @ropaone_</span>
+		</section>
+	</main>
+	<footer>
+		<p> Curr&iacute;culum de Rocio Paone — Computaci&oacute;n III 2024</p>
+	</footer>
 </body>
 </html>
