--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <header>
-  <nav>
+  <nav> <!--quise linkear los nombres del nav con los de sction pero no lo se hacer-->
     <span> Sobre mi</span>
     <span> Skills</span>
     <span> Estudios</span>
