Correcciones index.html
Falta mejorar un poco el indentado. Fijate que te dejé algunos comentarios sobre el codigo con correcciones, y te respondí ahí mismo lo de linkear dentro del html. Cualquier cosa si te quedan dudas con eso, o con cualquier cosa, podemos verlo en clase mañana

Seguí asi!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
   <nav> <!--quise linkear los nombres del nav con los de sction pero no lo se hacer-->
+	  <!-- Para linkearlos, necesitas usar la etiqueta <a>. Lo podés encontrar en el campus en la seccion de CSS, el video de etiqueta a. Cerca del final de ese video explica bien cómo hacerlo. -->
     <span> Sobre mi</span>
     <span> Skills</span>
     <span> Estudios</span>
@@ -25,6 +26,7 @@
 		</section>
 		<section>
 			<h2> Skills</h2>
+			<!-- Siempre acordate de contener los <li> dentro de un <ul> u <ol> -->
 			<li>Ingl&eacute;s (Intermedio)</li>
 			<li>Proactiva</li>
 			<li>Trabajo en equipo</li>
@@ -40,7 +42,7 @@
 		<section>
 			<h2> Estudios</h2>
 			<li>Bachiller en Comunicaci&oacute;n</li>
-			<ul> Colegio Colinas Verdes (2013-2019)</ul>
+			<ul> Colegio Colinas Verdes (2013-2019)</ul> <!-- La etiqueta ul se usa para contener a los li. Es decir, como los section, se cierra después del último li, no en la misma línea. Y, si va a tener un texto dentro que no es un li, debería ir como una p o un h1,2 o el número que uses; dependiendo lo que necesites -->
 			<li>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</li>
 			<ul> Universidad Nacional de Lan&uacute;s (2020-actualidad)</ul>
 			<li>Ingl&eacute;s Level 5th</li>
