Arreglo de HTML5 y creacion de CSS

--- a/index.html
+++ b/index.html
@@ -3,50 +3,67 @@
 <head>
 <meta charset="utf-8">
 <title>Paone Rocio</title>
+	<link href="estilos.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <nav> <!--quise linkear los nombres del nav con los de sction pero no lo se hacer-->
-    <span> Sobre mi</span>
-    <span> Skills</span>
-    <span> Estudios</span>
-    <span> Contacto</span>
-  </nav>
+	<header>
+		<nav> <!--ME GUSATRIA PROBAR HACERLE BORDES REDONDEADOS-->
+			<ul class="ul-nav">
+				<li class="li-nav"><a class="a-nav" href="index.html">Inicio</a></li>
+				<li class="li-nav"><a class="a-nav" href="sobre-mi">Sobre mi</a></li>
+				<li class="li-nav"><a class="a-nav" href="skills">Skills</a></li>
+				<li class="li-nav"><a class="a-nav" href="estudios">Estudios</a></li>
+				<li class="li-nav"><a class="a-nav" href="contacto">Contacto</a></li>
+			</ul>
+		</nav>
 	</header>
 	<main>
 		<section>
 			<h1> Rocio Paone</h1>
-			<img src="img/paone_rocio.jpg" width="540px" height="675px" alt="Foto de Rocio Paone">
+			<img src="img/paone_rocio.jpg" width="540px" height="675px" alt="Foto de Rocio Paone"> <!--FALTA CORTAR FOTO EN PS-->
 		</section>
+		
+		
 		<section>
 			<h2> Sobre m&iacute;</h2>
 			<p>¡Hola! Me llamo Rocio, pero prefiero que me digan Ro. Tengo 22 años y me encanta poder crear y materializar ideas. Siempre busco desafiar mis l&iacute;mites y expandir mis habilidades. Estoy ansiosa por contribuir con mi creatividad y determinaci&oacute;n a nuevos proyectos y equipos.</p>
 		</section>
+		
+		
 		<section>
 			<h2> Skills</h2>
-			<li>Ingl&eacute;s (Intermedio)</li>
-			<li>Proactiva</li>
-			<li>Trabajo en equipo</li>
-			<li>Edici&oacute;n de video</li>
-			<li>Ilustraci&oacute;n</li>
-			
+			<ul>
+				<li>Ingl&eacute;s (Intermedio)</li>
+				<li>Proactiva</li>
+				<li>Trabajo en equipo</li>
+				<li>Edici&oacute;n de video</li>
+				<li>Ilustraci&oacute;n</li>				
+			</ul>
 			<h3> Software</h3>
-			<li>Adobe Photoshop</li>
-			<li>Adobe Illustrator</li>
-			<li>Adobe InDesign</li>
-			<li>Adobe Premiere Rush</li>
+			<ul>
+				<li>Adobe Photoshop</li>
+				<li>Adobe Illustrator</li>
+				<li>Adobe InDesign</li>
+				<li>Adobe Premiere Rush</li>			
+			</ul>
 	  	</section>
+		
+		
 		<section>
 			<h2> Estudios</h2>
-			<li>Bachiller en Comunicaci&oacute;n</li>
-			<ul> Colegio Colinas Verdes (2013-2019)</ul>
-			<li>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</li>
-			<ul> Universidad Nacional de Lan&uacute;s (2020-actualidad)</ul>
-			<li>Ingl&eacute;s Level 5th</li>
-			<ul> School of English Abbey Road (en curso)</ul>
+			<dl>
+				<dt>Bachiller en Comunicaci&oacute;n</dt>
+				<dd>Colegio Colinas Verdes (2013-2019)</dd>
+				<dt>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</dt>
+				<dd>Universidad Nacional de Lan&uacute;s (2020-actualidad)</dd>
+				<dt>Ingl&eacute;s Level 5th</dt>
+				<dd>School of English Abbey Road (en curso)</dd>
+			</dl>
 	  	</section>
-		<section>
+		
+		
+		<section>  <!--ALGO ME DICE QUE ESTA SECCION, COMO LA ESTOY ARMANDO, ESTA MAL O PODRIA SER MEJOR PERO NO SE COMO YYY ADEMAS NO SE COMO PONER LA TIPO EN LOS TEXTOS-->
 			<h2> Contacto</h2>
 			<img src="img/whatsapp.png" width="30px" height="30px" alt="Logo WhatsApp">
 			<span>1521842618</span>
@@ -58,8 +75,9 @@
 			<span> @ropaone_</span>
 		</section>
 	</main>
-	<footer>
+	<footer>  <!--ME GUSTARIA QUE EL FOOTER TENGA COLOR DE FONDO-->
 		<p> Curr&iacute;culum de Rocio Paone — Computaci&oacute;n III 2024</p>
+		
 	</footer>
 </body>
 </html>
