Correcciones index.html
Bien el código! Está muy prolijito, y buenísimo el uso de &acute;
Te dejé una mini corrección, y un comentario sobre la duda que tenías 😄

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		
 		<section>
 			<h2> Estudios</h2>
-			<dl>
+			<dl> <!-- Este tipo de etiquetas, dl, dt y dd, suelen usarse más bien en diccionarios o textos académicos -->
 				<dt>Bachiller en Comunicaci&oacute;n</dt>
 				<dd>Colegio Colinas Verdes (2013-2019)</dd>
 				<dt>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</dt>
@@ -64,6 +64,8 @@
 		
 		
 		<section>  <!--ALGO ME DICE QUE ESTA SECCION, COMO LA ESTOY ARMANDO, ESTA MAL O PODRIA SER MEJOR PERO NO SE COMO YYY ADEMAS NO SE COMO PONER LA TIPO EN LOS TEXTOS-->
+			<!-- No está mal, enrealidad depende de qué quieras hacer. ¿Cómo querés que se vea esta sección? 
+			Lo que sí, en vez de usar span intentá usar otra etiqueta. No porque esté mal, porque está bien el uso, nada más porque en esta cursada queremos que las cosas que son diseño en sí, como span que te pone una cosa al lado de la otra, las hagan sólo con css-->
 			<h2> Contacto</h2>
 			<img src="img/whatsapp.png" width="30px" height="30px" alt="Logo WhatsApp">
 			<span>1521842618</span>
