Correciones en CSS, HTML e imagen cortada a medida

--- a/index.html
+++ b/index.html
@@ -2,82 +2,82 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Paone Rocio</title>
+<title>Rocio Paone — Mi CV</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<header>
-		<nav> <!--ME GUSATRIA PROBAR HACERLE BORDES REDONDEADOS-->
-			<ul class="ul-nav">
+		<nav class="menu-navegador">
+			<ul id="navegador-id">
 				<li class="li-nav"><a class="a-nav" href="index.html">Inicio</a></li>
-				<li class="li-nav"><a class="a-nav" href="sobre-mi">Sobre mi</a></li>
-				<li class="li-nav"><a class="a-nav" href="skills">Skills</a></li>
-				<li class="li-nav"><a class="a-nav" href="estudios">Estudios</a></li>
-				<li class="li-nav"><a class="a-nav" href="contacto">Contacto</a></li>
+				<li class="li-nav"><a class="a-nav" href="seccion-sobre-mi">Sobre mi</a></li>
+				<li class="li-nav"><a class="a-nav" href="seccion-skills">Skills</a></li>
+				<li class="li-nav"><a class="a-nav" href="seccion-estudios">Estudios</a></li>
+				<li class="li-nav"><a class="a-nav" href="seccion-contacto">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<section>
-			<h1> Rocio Paone</h1>
-			<img src="img/paone_rocio.jpg" width="540px" height="675px" alt="Foto de Rocio Paone"> <!--FALTA CORTAR FOTO EN PS-->
+		<section class="seccion-sobre-mi">
+			<header id="foto-titulo-id">
+				<h1>Rocio Paone — Mi CV</h1>
+				<img src="img/paone_rocio.jpg" width="500px" height="500px" alt="Foto de Rocio Paone">
+			</header>
+			<p id="texto-sobre-mi-id">¡Hola! Me llamo Rocio, pero prefiero que me digan Ro. Tengo 22 años y me encanta poder crear y materializar ideas. Siempre busco desafiar mis l&iacute;mites y expandir mis habilidades. Estoy ansiosa por contribuir con mi creatividad y determinaci&oacute;n a nuevos proyectos y equipos.</p>
 		</section>
 		
 		
-		<section>
-			<h2> Sobre m&iacute;</h2>
-			<p>¡Hola! Me llamo Rocio, pero prefiero que me digan Ro. Tengo 22 años y me encanta poder crear y materializar ideas. Siempre busco desafiar mis l&iacute;mites y expandir mis habilidades. Estoy ansiosa por contribuir con mi creatividad y determinaci&oacute;n a nuevos proyectos y equipos.</p>
-		</section>
+		<section class="seccion-skills">
+			<header id="titulo-skills-id"><h2>Skills</h2></header>
+				<ul id="lista-skills-id">
+					<li>Ingl&eacute;s (Intermedio)</li>
+					<li>Proactiva</li>
+					<li>Trabajo en equipo</li>
+					<li>Edici&oacute;n de video</li>
+					<li>Ilustraci&oacute;n</li>
+					<li>Ingl&eacute;s (Intermedio)</li>
+					<li>Proactiva</li>
+					<li>Trabajo en equipo</li>
+					<li>Edici&oacute;n de video</li>
+					<li>Ilustraci&oacute;n</li>
+				</ul>
+			<header id="titulo-software-id"><h2>Software</h2></header>
+				<ul id="lista-software-id">
+					<li>Adobe Photoshop</li>
+					<li>Adobe Illustrator</li>
+					<li>Adobe InDesign</li>
+					<li>Adobe Premiere Rush</li>			
+				</ul>
+	  	</section>
 		
 		
-		<section>
-			<h2> Skills</h2>
-			<ul>
-				<li>Ingl&eacute;s (Intermedio)</li>
-				<li>Proactiva</li>
-				<li>Trabajo en equipo</li>
-				<li>Edici&oacute;n de video</li>
-				<li>Ilustraci&oacute;n</li>				
-			</ul>
-			<h3> Software</h3>
-			<ul>
-				<li>Adobe Photoshop</li>
-				<li>Adobe Illustrator</li>
-				<li>Adobe InDesign</li>
-				<li>Adobe Premiere Rush</li>			
+		<section class="seccion-estudios">
+			<h2 id="titulo-estudios-id">Estudios</h2>
+			<ul id="lista-estudios-id">
+				<li>Bachiller en Comunicaci&oacute;n — Colegio Colinas Verdes (2013-2019)</li>
+				<li>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual — Universidad Nacional de Lan&uacute;s (2020-actualidad)</li>
+				<li>Ingl&eacute;s Level 5th — School of English Abbey Road (en curso)</li>
 			</ul>
 	  	</section>
 		
 		
-		<section>
-			<h2> Estudios</h2>
-			<dl>
-				<dt>Bachiller en Comunicaci&oacute;n</dt>
-				<dd>Colegio Colinas Verdes (2013-2019)</dd>
-				<dt>Licenciatura en Dise&ntilde;o y Comunicaci&oacute;n Visual</dt>
-				<dd>Universidad Nacional de Lan&uacute;s (2020-actualidad)</dd>
-				<dt>Ingl&eacute;s Level 5th</dt>
-				<dd>School of English Abbey Road (en curso)</dd>
-			</dl>
-	  	</section>
-		
-		
-		<section>  <!--ALGO ME DICE QUE ESTA SECCION, COMO LA ESTOY ARMANDO, ESTA MAL O PODRIA SER MEJOR PERO NO SE COMO YYY ADEMAS NO SE COMO PONER LA TIPO EN LOS TEXTOS-->
-			<h2> Contacto</h2>
-			<img src="img/whatsapp.png" width="30px" height="30px" alt="Logo WhatsApp">
-			<span>1521842618</span>
-			<img src="img/instagram.png" width="30px" height="30px" alt="Logo Instagram">
-			<span> @ropaone_</span>
-			<img src="img/correo negro.png" width="30px" height="30px" alt="Logo Correo">
-			<span> ropaone28@gmail.com</span>
-			<img src="img/behance.png" width="30px" height="30px" alt="Logo Behance">
-			<span> @ropaone_</span>
+		<section class="seccion-contacto">
+			<header id="titulo-contacto-id"><h2>Contacto</h2></header>
+			<article id="redes-sociales-id">
+				<img src="img/whatsapp.png" width="20px" height="20px" alt="Logo WhatsApp">
+				<h4>1521842618</h4>
+				<img src="img/instagram.png" width="20px" height="20px" alt="Logo Instagram">
+				<h4> @ropaone_</h4>
+				<img src="img/correo negro.png" width="20px" height="20px" alt="Logo Correo">
+				<h4> ropaone28@gmail.com</h4>
+				<img src="img/behance.png" width="20px" height="20px" alt="Logo Behance">
+				<h4> @ropaone_</h4>
+			</article>
 		</section>
 	</main>
-	<footer>  <!--ME GUSTARIA QUE EL FOOTER TENGA COLOR DE FONDO-->
+	<footer class="footer">
 		<p> Curr&iacute;culum de Rocio Paone — Computaci&oacute;n III 2024</p>
-		
 	</footer>
 </body>
 </html>
