Correcciones index.html
Te deje unas correcciones sobre el código, cuidado con repetir header!!

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 				<li class="li-nav"><a class="a-nav" href="seccion-skills">Skills</a></li>
 				<li class="li-nav"><a class="a-nav" href="seccion-estudios">Estudios</a></li>
 				<li class="li-nav"><a class="a-nav" href="seccion-contacto">Contacto</a></li>
+				<!--Fijate que todos estos links no te están llevando a las secciones porque les falta un #, cuando queremos vincular a un id hay que ponerlo o no lo toma.-->
 			</ul>
 		</nav>
 	</header>
 	<main>
 		<section class="seccion-sobre-mi">
+			<!--En los html nosotros usamos un solo header!! Es parte de la estructura principal del body: header, main, footer. En estos casos tenés que usar más bien un article o un div.-->
 			<header id="foto-titulo-id">
 				<h1>Rocio Paone — Mi CV</h1>
 				<img src="img/paone_rocio.jpg" width="500px" height="500px" alt="Foto de Rocio Paone">
