Correcion final de HTML y CSS. Agregado de iconos de emojis.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Rocio Paone — Mi CV</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="img/emojis/teddy-bear.png" type="image/x-icon" sizes= "16x16">
+	<link rel="shortcut icon" href="img/FAVICON.svg" type="image/x-icon" sizes= "16x16">
 </head>
 
 <body>
@@ -14,21 +14,21 @@
 			<ul>
 				<li class="li-nav"><a class="a-nav" href="#texto-sobre-mi-id">Sobre mi</a></li>
 				<li class="li-nav"><a class="a-nav" href="#titulo-skills-id">Skills</a></li>
+				<li class="li-nav"><a class="a-nav" href="#titulo-software-id">Software</a></li>
 				<li class="li-nav"><a class="a-nav" href="#titulo-estudios-id">Estudios</a></li>
-				<li class="li-nav"><a class="a-nav" href="#redes-sociales-id">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
 		<!--SECCION PRINCIPAL CON FOTO Y TEXTO GRANDE EN GOTHAM CONDENSED-->
 		<section class="seccion-sobre-mi">
-			<div id="foto-principal-id"> <img src="img/PRINCIPAL 2.png" sizes="1%" alt="Foto de Rocio Paone con emojis variados alrededor"> </div>
+			<div id="foto-principal-id"> <img src="img/PRINCIPAL.svg" sizes="1%" alt="Foto de Rocio Paone con emojis variados alrededor"> </div>
 			<p id="texto-sobre-mi-id">Me llamo Ro — Tengo 22 años y me encanta crear y materializar ideas (y los emojis)</p>
 		</section>
 		<!--SECCION DE SKILLS CON LISTA DETALLADA + SOFTWARE-->
-		<section class="seccion-skills-software"> 
-			<div id="titulo-skills-id"> <h1> Skills </h1> </div>
-				<ul id="lista-skills-id">
+		<section class="seccion-skills"> <img src="img/SKILL.svg" width="50px" height="50px" alt="Emoji de una cara nerd con lentes">
+			<div id="titulo-skills-id"><h1>Skills</h1></div>	
+			<ul id="lista-skills-id">
 					<li>Ingl&eacute;s (Intermedio)</li>
 					<li>Proactiva</li>
 					<li>Trabajo en equipo</li>
@@ -40,16 +40,21 @@
 					<li>Edici&oacute;n de video</li>
 					<li>Ilustraci&oacute;n</li>
 				</ul>
+		</section>
+		
+		<section class="seccion-software"> <img src="img/SOFTWARE.svg" width="50px" height="50px" alt="Emoji de un alien violeta">
 			<div id="titulo-software-id"> <h1>Software</h1> </div>
 				<ul id="lista-software-id">
 					<li>Adobe Photoshop</li>
 					<li>Adobe Illustrator</li>
 					<li>Adobe InDesign</li>
-					<li>Adobe Premiere Rush</li>			
+					<li>Adobe Premiere Rush</li>
+					<li>Adobe Lightroom</li>
+					<li>CapCut</li>
 				</ul>
 	  	</section>
 		<!--SECCION DE MIS ESTUDIOS CON LINEA DE TEXTO-->
-		<section class="seccion-estudios">
+		<section class="seccion-estudios"> <img src="img/ESTUDIOS.svg" width="50px" height="50px" alt="Emoji de 3 libros apilados">
 			<h1 id="titulo-estudios-id">Estudios</h1>
 			<ul id="lista-estudios-id">
 				<li>Bachiller en Comunicaci&oacute;n — Colegio Colinas Verdes (2013-2019)</li>
@@ -57,38 +62,15 @@
 				<li>Ingl&eacute;s Level 5th — School of English Abbey Road (en curso)</li>
 			</ul>
 	  	</section>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		<!--SECCION DE CONTACTO-->
-		<section class="seccion-contacto">
-			<div id="redes-sociales-id">
-				<a id="linkeo-wpp-id" href="https://wa.link/867qyu" target="_blank"><img src="img/whatsapp.png" width="20px" height="20px" alt="Logo WhatsApp"> <h2>1121842618</h2></a>
-				<a id="linkeo-ig-id" href="https://www.instagram.com/ropaone_/" target="_blank"><img src="img/instagram.png" width="20px" height="20px" alt="Logo Instagram"><h2>@ropaone</h2></a>
-				<a id="linkeo-email-id" href="ropaone28@gmail.com" target="_blank"><img src="img/correo negro.png" width="20px" height="20px" alt="Logo Correo"> <h2>ropaone28@gmail.com</h2></a>
-			</div>
-		</section>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
 	</main>
-	<!--FOOTER CON INFO DE QUE ES PROYECTO DE CATEDRA-->
+	<!--FOOTER CON CONTACTO-->
 	<footer class="footer">
 		<p> Curr&iacute;culum de Rocio Paone — Computaci&oacute;n III 2024</p>
+		<div id="contacto-id">
+				<a href="https://www.instagram.com/ropaone_/" target="_blank"><img src="img/IG.svg" width="50px" height="50px" alt="Emoji de una cámara en representación de Instagram"></a>
+				<a href="https://wa.link/0cgqes" target="_blank"><img src="img/WPP.svg" width="50px" height="50px" alt="Emoji de un celular en representación de WhatsApp"></a>
+				<a href="mailto:ropaone28@gmail.com" target="_blank"><img src="img/EMAIL.svg" width="50px" height="50px" alt="Emoji de una carta con un corazón en representación de Correo electrónico"></a>
+			</div>
 	</footer>
-</body>
+	</body>
 </html>
