Correcion final: tamaño de la imagen principal

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<main>
 		<!--SECCION PRINCIPAL CON FOTO Y TEXTO GRANDE EN GOTHAM CONDENSED-->
 		<section class="seccion-sobre-mi">
-			<div id="foto-principal-id"> <img src="img/PRINCIPAL.svg" sizes="1%" alt="Foto de Rocio Paone con emojis variados alrededor"> </div>
+			<div id="foto-principal-id"> <img src="img/PRINCIPAL.svg" width="510px" height="510px" alt="Foto de Rocio Paone con emojis variados alrededor"> </div>
 			<p id="texto-sobre-mi-id">Me llamo Ro — Tengo 22 años y me encanta crear y materializar ideas (y los emojis)</p>
 		</section>
 		<!--SECCION DE SKILLS CON LISTA DETALLADA + SOFTWARE-->
